--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "twit": "^2.2.9",
     "csv": "^2",
-    "csv-parse": "^2"
+    "csv-parse": "^2",
+    "rita": "^1.1.62",
+    "twit": "^2.2.9"
   }
 }
